force-app/main/default/objects/Form_Field_Mapping__c/Form_Field_Mapping__c.object-meta.xml
<CustomObject>
    <label>Form Field Mapping</label>
    <pluralLabel>Form Field Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
<nameField>
    <label>Mapping Name</label>
    <type>Text</type>
</nameField>
</CustomObject>