force-app/main/default/objects/Form_Field_Mapping__c/fields/Target_Field_API__c.field-meta.xml
<CustomField>
    <fullName>Target_Field_API__c</fullName>
    <label>Target Field API Name</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>