force-app/main/default/objects/Form_Field_Mapping__c/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <label>Target Object</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>