force-app/main/default/objects/Form_Field_Mapping__c/fields/Template_Version__c.field-meta.xml
<CustomField>
    <fullName>Template_Version__c</fullName>
    <label>Template Version</label>
    <type>Lookup</type>
    <referenceTo>Form_Template_Version__c</referenceTo>
    <relationshipLabel>Field Mappings</relationshipLabel>
    <relationshipName>FieldMappings</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>