force-app/main/default/objects/Form_Field_Mapping__c/fields/Transform__c.field-meta.xml
<CustomField>
    <fullName>Transform__c</fullName>
    <label>Transform</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>