force-app/main/default/objects/Form_Field_Mapping__c/fields/When__c.field-meta.xml
<CustomField>
    <fullName>When__c</fullName>
    <label>When</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
        <fullName>OnSubmit</fullName>
    </value>
<value>
        <fullName>OnDraftSave</fullName>
    </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>